tests/syntax/good/testfile-semicolon-8.go
package main

func foo(x int, y int)  { z := x +
y
z++}
func main() {
	foo(1,
          2)
}
