tests/syntax/bad/testfile-semicolon-4.go
package main

func main() {
  return
  / 2
}
